[api-task] Добавил GameSettingsService.php для задания размеров по умолчанию. Изменил появление точек (теперь появляются в круге c радиусом Wall::$radius)
